--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.556.0",
     "@clerk/nextjs": "^4.29.12",
+    "@huggingface/inference": "^2.6.7",
+    "@langchain/openai": "^0.0.28",
     "@neondatabase/serverless": "^0.9.1",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.29.2",
-    "aws-sdk": "^2.1601.0",
+    "@types/md5": "^2.3.5",
+    "aws-sdk": "^2.1603.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
+    "langchain": "^0.1.34",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "openai-edge": "^1.2.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
